--- a/shared/style.css
+++ b/shared/style.css
@@ -75,3 +75,19 @@ video {
   padding: 8px;
   margin-top: 0;
 }
+
+
+/* add '20/07/04 */
+
+#test-1{
+  border-style: solid;border-width: 1px;
+}
+#test-2{
+  border-style: solid;border-width: 1px;
+}
+#test-3{
+  border-style: solid;border-width: 1px;
+}
+#test-4{
+  border-style: solid;border-width: 1px;
+}
