--- a/shared/style.css
+++ b/shared/style.css
@@ -79,7 +79,7 @@ video {
 
 /* add '20/07/04 */
 
-#test-1{
+/* #test-1{
   border-style: solid;border-width: 1px;
 }
 #test-2{
@@ -90,4 +90,4 @@ video {
 }
 #test-4{
   border-style: solid;border-width: 1px;
-}
+} */
